# sketches

./: .gitignore  .pre-commit-config.yaml  ALGORITHMS.md  BENCHMARKING_GUIDE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  FEATURE_COMPLETENESS.md  HISTORY.md  LICENSE.md  OPTIMIZE.md  PERFORMANCE_ISSUES.md  PERFORMANCE_REPORT.md  README.md  ROADMAP.md  TODO.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: performance_optimization.md
.github/workflows/: ci.yml  publish.yml
benches/: sketch_benchmarks.rs
benchmarks/: Makefile  README.md  test_performance.py
benchmarks/criterion/: hash_benchmarks.rs  sketch_benchmarks.rs
benchmarks/datasets/: Cargo.toml
benchmarks/datasets/src/: lib.rs
benchmarks/reporter/: plots.py  report.py  test_report.py  thresholds.json
benchmarks/results/: .gitignore  apache-rust.baseline.csv  apache-rust.csv  cpp.baseline.csv  cpp.csv  ours.csv  python-apache.baseline.csv  python-ours.baseline.csv  rmse_apache-cpp.csv  rmse_apache-rust.csv  rmse_ours.csv  rmse_schema.md  schema.md  tpch-apache-rust.csv  tpch-cpp.csv  tpch-ours.csv
benchmarks/runner-apache-rust/: Cargo.toml
benchmarks/runner-apache-rust/.cargo/: config.toml
benchmarks/runner-apache-rust/src/: lib.rs  main.rs  timing.rs
benchmarks/runner-apache-rust/tests/: live_bytes.rs  rmse_smoke.rs  smoke.rs
benchmarks/runner-cpp/: CMakeLists.txt  main.cpp
benchmarks/runner-ours/: Cargo.toml
benchmarks/runner-ours/.cargo/: config.toml
benchmarks/runner-ours/src/: counting_alloc.rs  lib.rs  main.rs  timing.rs
benchmarks/runner-ours/tests/: live_bytes.rs  murmur3.rs  rmse_smoke.rs  smoke.rs
benchmarks/runner-python/: bench_common.py  runner.py  test_bench_common.py  test_runner.py
crates/cpc/: Cargo.toml
crates/cpc/src/: lib.rs
crates/hll/: Cargo.toml
crates/hll/src/: lib.rs  pp.rs
crates/theta/: Cargo.toml  README.md
crates/theta/src/: lib.rs
docs/: algorithms.md  background.md  benchmarks.md  comparison.md  design.md  usage.md
examples/: README.md  aod_demo.rs  basic_usage.rs  bloom_filter_demo.rs  cardinality_optimization_demo.rs  frequency_estimation_demo.rs  hll_comparison.rs  memory_optimization_benchmark.rs  optimization_benchmark.rs  phase3_benchmark.rs  phase3_demo.rs  phase3_tpch_benchmark.rs  quantiles_demo.rs  reservoir_sampling_demo.rs  simple_demo.rs  tdigest_demo.rs  tpch_benchmarks.rs  tpch_generate.rs  tpch_performance_analysis.ipynb  tpch_test.py
notebooks/: getting_started.ipynb  performance_comparison.ipynb  simd_optimizations.ipynb
py-sketches/: Cargo.toml  memtest.py  ptest.py  pyproject.toml
py-sketches/src/: lib.rs
py-sketches/tests/: test_memory.py  test_polars_vs_sketch.py  test_sketches.py
src/: aod.rs  bloom.rs  compact_memory.rs  countmin.rs  cpc.rs  cpc_compression.rs  cpc_compression_data.rs  cpc_tables.rs  fast_hash.rs  frequent.rs  hll.rs  lib.rs  linear.rs  pp.rs  quantiles.rs  req.rs  sampling.rs  serialization.rs  simd_ops.rs  tdigest.rs  theta.rs  tuple.rs  varopt.rs
src/codec/: mod.rs
src/hash/: mod.rs  murmur3.rs  xxh3.rs
tests/: cpc_accuracy.rs  foundation_accuracy.rs  foundation_roundtrip.rs  hll_fidelity.rs  memtest.py  test_input_validation.py  test_introspection.py  test_memory.py  test_memory_optimizations.py  test_polars_vs_sketch.py  test_serialization_roundtrip.py  test_sketches.py  tpch_validation.rs
