[package]
name = "sketches"
version = "0.1.6"
edition = "2024"

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }

[dev-dependencies]
csv = "1"
tracing = "0.1"
tracing-subscriber = "0.3"


[lib]
name = "sketches"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }

[dev-dependencies]
csv = "1"
tracing = "0.1"
tracing-subscriber = "0.3"


[lib]
name = "sketches"
crate-type = ["cdylib", "rlib"]

[features]
# Enable Python extension bindings
extension-module = ["pyo3"]
# Do not enable extension-module by default; enable explicitly for Python builds
default = []
