[package]
name = "sketches"
version = "0.1.9"
edition = "2024"

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tdigest = "0.2"

# Performance optimization dependencies
jemallocator = { version = "0.5", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3"], optional = true }
flatbuffers = { version = "24.3", optional = true }
rayon = { version = "1.10", optional = true }
ahash = { version = "0.8", optional = true }

[dev-dependencies]
csv = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tpchgen = "1.1"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"


[lib]
name = "sketches"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }

[dev-dependencies]
csv = "1"
tracing = "0.1"
tracing-subscriber = "0.3"


[lib]
name = "sketches"
crate-type = ["cdylib", "rlib"]

[features]
# Enable Python extension bindings
extension-module = ["pyo3"]
# Performance optimizations
optimized = ["jemallocator", "xxhash-rust", "flatbuffers", "rayon", "ahash"]
# SIMD optimizations (requires nightly or specific CPU features)
simd = []
# Do not enable extension-module by default; enable explicitly for Python builds
default = []
