[package]
name = "sketches"
version = "0.2.1"
edition = "2024"

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"], optional = true }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
tdigest = { version = "0.2", features = ["use_serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
csv = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tpchgen = "1.1"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"


[lib]
name = "sketches"
crate-type = ["cdylib", "rlib"]

# Criterion micro-benchmarks live under the unified benchmarks/ tree.
[[bench]]
name = "sketch_benchmarks"
path = "benchmarks/criterion/sketch_benchmarks.rs"
harness = false

[[bench]]
name = "hash_benchmarks"
path = "benchmarks/criterion/hash_benchmarks.rs"
harness = false

[features]
# Enable Python extension bindings
extension-module = ["pyo3"]
# Do not enable extension-module by default; enable explicitly for Python builds
default = []
