# py-datasketches/pyproject.toml

[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "rusty-sketches"
description = "Python bindings for Sketches implemented in Rust via PyO3"
readme = "README.md"
authors = [
  { name = "Tarek Allam", email = "t.allam.jr@gmail.com" },
]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tallamjr/sketches"
Repository = "https://github.com/tallamjr/sketches"

[project.optional-dependencies]
# “dev” extras for development tools (e.g. to allow `pip install .[dev]`)
dev = [
  "maturin>=1.3.2,<2.0",
  "pytest>=8.3.5",
  "polars",
  "psutil",
  "twine",
]

[tool.maturin]
bindings = "pyo3"
module-name = "sketches"

# Optionally include extra files in sdist or wheel
include = [{ path = "rust-toolchain.toml", format = "sdist" }]
