[package]
name = "rusty-sketches"
version = { workspace = true }
edition = "2024"

[lib]
name = "sketches"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
cpc = { path = "../crates/cpc" }
hll = { path = "../crates/hll" }
theta = { path = "../crates/theta" }
csv = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
