# py-datasketches/pyproject.toml

[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

[project]
name = "sketches"
version = "0.1.0"
description = "Python bindings for Rust Sketches implementations via PyO3"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/your-org/datasketches-rs"
Repository = "https://github.com/your-org/datasketches-rs"

[project.optional-dependencies]
# “dev” extras for development tools (e.g. to allow `pip install .[dev]`)
dev = [
  "maturin>=1.3.2,<2.0"
]

[tool.maturin]
module-name = "sketches"
# Optionally include extra files in sdist or wheel
# include = [{ path = "rust-toolchain.toml", format = "sdist" }]
